--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   
   <link rel="stylesheet" href="/stylesheets/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link rel="stylesheet" href="./stylesheets/leaflet.css">
 </head>
 
 <body>
@@ -17,13 +18,17 @@
       <div class="col-lg-6 mx-auto">
         <p class="lead mb-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam tenetur deleniti magnam explicabo sint, distinctio illum error eum pariatur rem ratione sunt molestias voluptatibus ipsum necessitatibus alias consequatur facere fuga.</p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-          <button type="button" class="btn btn-outline-primary btn-lg px-4 me-sm-3">Find Me</button>
+          <button type="button" id="action" class="btn btn-outline-primary btn-lg px-4 me-sm-3">Find Me</button>
         </div>
+      </div>
+      <div class="container-fluid">
+        <div id="map" class="shadow-lg mx-auto"></div>
       </div>
     </div>
   </main>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+  <script src="./javascripts/webmap.js"></script>
 </body>
 
 </html>
