--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
   <main>
     <div class="px-4 pt-5 my-5 text-center">
       <h1 class="display-4 fw-bold">Geolocation Presence System</h1>
-      <div class="col-lg-6 mx-auto">
-        <p class="lead mb-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam tenetur deleniti magnam explicabo sint, distinctio illum error eum pariatur rem ratione sunt molestias voluptatibus ipsum necessitatibus alias consequatur facere fuga.</p>
+      <div class="col-lg-6 mx-auto mt-3">
+        <input type="text" class="form-control mx-auto mb-4" style="width: 500px;" id="name" placeholder="Your Name...">
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
           <button type="button" id="action" class="btn btn-outline-primary btn-lg px-4 me-sm-3">Find Me</button>
         </div>
