Check If Cookie Exist & Add Response If Location Found

--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
       <h1 class="display-4 fw-bold">Geolocation Presence System</h1>
       <div class="col-lg-6 mx-auto mt-3">
         <input type="text" class="form-control mx-auto mb-4" style="width: 500px;" id="name" placeholder="Your Name...">
-        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-          <button type="button" id="action" class="btn btn-outline-primary btn-lg px-4 me-sm-3">Find Me</button>
+        <div class="justify-content-sm-center mb-4" id="container-name">
+          <button type="button" id="action" class="btn btn-outline-primary btn-md px-4 me-sm-3">Find Me</button>
         </div>
       </div>
       <div class="container-fluid">
